--- a/delightcms/error.html
+++ b/delightcms/error.html
@@ -6,7 +6,7 @@
     -->
     <head>
         <meta charset="UTF-8">
-        <title>Fehler</title>  
+        <title>Fehlerzzz</title>
     </head>
     <body>
         <div style="width: 400px;padding: 12px;margin:auto;">
